--- a/seice/core/templates/index.html
+++ b/seice/core/templates/index.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SEICE - Sistema de Estagiários</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="{% static 'style/style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -374,6 +375,6 @@
     
     <div id="toast-container"></div>
 
-    <script src="js/index.js"></script>
+    <script src="{% static 'js/index.js' %}"></script>
 </body>
 </html>
