--- a/seice/core/templates/index.html
+++ b/seice/core/templates/index.html
@@ -35,6 +35,11 @@
                     <i class="fas fa-chart-bar"></i>
                     <span>Relatórios</span>
                 </li>
+                <!-- aqui desenvolver uma calculadora de horas que o juninho pediu -->
+                <li data-page="#">
+                    <i class="fas fa-chart-bar"></i>
+                    <span>Calculadora de Horas</span>
+                </li>
             </ul>
         </nav>
         <div class="sidebar-footer">
