--- a/seice/core/templates/login.html
+++ b/seice/core/templates/login.html
@@ -25,7 +25,7 @@
                             <label for="password">Senha</label>
                             <input type="password" id="password" name="password" required>
                         </div>
-                        
+                        <div></div>
                         <div class="modal-footer">
                             <button type="submit" class="btn primary">Entrar</button>
                         </div>
