alterações na cfor do dahsboard de nova tela de login e calculadora

--- a/seice/core/templates/index.html
+++ b/seice/core/templates/index.html
@@ -36,10 +36,12 @@
                     <span>Relatórios</span>
                 </li>
                 <!-- aqui desenvolver uma calculadora de horas que o juninho pediu -->
-                <li data-page="#">
-                    <i class="fas fa-chart-bar"></i>
-                    <span>Calculadora de Horas</span>
-                </li>
+       <li data-page="">
+       <a href="{% url 'calculadora_horas' %}">
+        <i class="fas fa-chart-bar"></i>
+         <span>Calculadora de Horas</span>
+            </a>
+            </li>
             </ul>
         </nav>
         <div class="sidebar-footer">
